# ComfyUI-ElevenLabs-Pro

./: .gitignore  CHANGELOG.md  README.md  __init__.py  nodes.py  pyproject.toml  pytest.ini  utils.py
shared/: __init__.py  auth.py  errors.py  node_utils.py  retry.py
tests/: conftest.py  test_audio_conversions.py  test_errors_scrubbing.py  test_nodes.py  test_pagination.py  test_retry.py
workflows/: 01_quickstart_tts.json  02_tts_full_params.json  03_tts_timestamps.json  04_dialogue_multi_speaker.json  05_voice_clone.json  06_voice_design.json  07_voice_create.json  08_fetch_voices.json  09_get_voice_by_name.json  10_sts_voice_transform.json  11_sfx_generation.json  12_audio_isolation.json  13_stt_basic.json  14_stt_diarization.json  15_music_generation.json  16_account_info.json  17_voice_tag_inserter.json  18_subtitle_export_srt.json  19_subtitle_export_vtt.json  20_audio_concat.json  21_audio_normalize.json  22_audio_metadata.json  23_audio_channels.json  24_audio_trim.json  25_cost_estimator.json  26_voice_settings_preset.json  27_save_audio.json  50_audiobook_pipeline.json  51_voice_clone_dub.json  52_sfx_library_builder.json  53_subtitled_narration.json  54_dialogue_episode.json  55_voice_design_pipeline.json  56_podcast_post.json
