[project]
name = "comfyui-elevenlabs-pro"
description = "Full-featured ElevenLabs integration for ComfyUI - TTS, STS, SFX, Music, Voice Cloning, STT, Dialogue + audio utilities"
version = "2.2.2"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "soundfile",
]

[project.urls]
Repository = "https://github.com/IxMxAMAR/ComfyUI-ElevenLabs-Pro"

[tool.comfy]
PublisherId = "ixmxamar"
DisplayName = "ComfyUI-ElevenLabs-Pro"
Icon = ""
